[project]
name = "agent_book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitpython>=3.1.45",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
]
