[project]
name = "agent_book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "gitpython>=3.1.45",
    "ipykernel>=7.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.4",
    "langchain-openai>=1.0.2",
    "langchain-text-splitters>=1.0.0",
    "openai>=2.7.1",
    "python-dotenv>=1.2.1",
    "ragas>=0.3.9",
    "rank-bm25>=0.2.2",
    "tavily-python>=0.7.12",
]
